--- a/week01_intro_to_javascript/baby-array-cardio/index.html
+++ b/week01_intro_to_javascript/baby-array-cardio/index.html
@@ -6,6 +6,6 @@
         <title>Baby Array Cardio</title>
     </head>
     <body>
-        <script src="script.js"></script>
+        <script src="dist/script.js"></script>
     </body>
 </html>
