--- a/week03_javascript_modules/movie_diary/index.html
+++ b/week03_javascript_modules/movie_diary/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Home</title>
-        <script type="module" src="src/main.js" defer></script>
+        <script type="module" src="dist/main.js" defer></script>
         <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     </head>
     <body class="bg-slate-500 text-white">
