--- a/week03_javascript_modules/movie_diary/src/journal.html
+++ b/week03_javascript_modules/movie_diary/src/journal.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Journal</title>
         <script src="https://cdn.tailwindcss.com"></script>
-        <script src="journal.js" defer></script>
+        <script src="../dist/journal.js" defer></script>
     </head>
     <body class="bg-slate-500 text-white">
         <nav class="p-4 bg-slate-600">
